@@ -1,4 +1,9 @@
 # vim: set noexpandtab:
+
+2012-09-18 Steve
+	* Added truthMatchType flag to Lepton class
+	* Added isChargeFlip flag to Electron class
+
 2012-09-18 Matt 
 	* Added NtSys_TRIGSF_UP(_DN) to SusyDefs so accomodate new trigger package 
 	* Increased event ClassDef number to reflect changes above.
@@ -7,7 +12,6 @@
 	      * Updated constructor which takes a string for which maps to use. Default is A-X (ie. all!)
 	* DilTrigLogic now dependent on DGTriggerReweight. Added to install script	
 
-	
 2012-09-18 Serhan Mete <amete@cern.ch>
 	* scripts/install.sh: Switch SUSYTools to 00-01-07
 	* SusyNtuple/SusyDefs.h: Added SusyNtSystNames and BTagSysNames
